[project]
name = "fuzz-core-enhanced"
version = "0.2.1"
description = "Protocol-scoped fuzz-core backend completion package"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "python-multipart>=0.0.9"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
